--- a/web_release/index.html
+++ b/web_release/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>捉妖雷达 web</title>
+    <title>我的雷达</title>
     <meta name="application-name" content="" />
     <meta name="keywords" content="value" />
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
